--- a/assignment/index.html
+++ b/assignment/index.html
@@ -12,6 +12,12 @@
       <h2>Check the console...</h2>
     </header>
     <!-- create an ordered list with any questions you have on this week's material -->
+    <ul> On the second assignment, I was trying the stretch goal that wanted the array to be turned into a list with 'and' in between each word.
+      I am going to keep trying it but was curious how this is actually solved.
+    </ul>
+    <ul></ul>
+    <ul></ul>
+
 
   </body>
 </html>
